--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "firebase": "^4.6.2",
     "md5": "^2.2.1",
+    "moment": "^2.19.2",
     "react": "^16.1.1",
+    "react-big-calendar": "^0.17.0",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.16"
   },
