--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.1.1",
     "react-big-calendar": "^0.17.0",
     "react-dom": "^16.1.1",
+    "react-popup": "^0.8.0",
     "react-scripts": "1.0.16"
   },
   "scripts": {
