--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.19.2",
     "react": "^16.1.1",
     "react-big-calendar": "^0.17.0",
+    "react-dialog": "^1.0.2",
     "react-dom": "^16.1.1",
     "react-popup": "^0.8.0",
     "react-scripts": "1.0.16"
